--- a/example/Metrics.ipynb
+++ b/example/Metrics.ipynb
@@ -444,13 +444,29 @@
     "\n",
     "Для оценки качества работы алгоритма на каждом из классов по отдельности введем метрики precision (точность) и recall (полнота)\n",
     "\n",
-    "precision = TP/(TP + FP),  recall = TP/(TP + FN)\n",
+    "accuracy = (TP + TN)/(TP + FN + TN + FP)\n",
     "\n",
-    "Precision можно интерпретировать как долю объектов, названных классификатором положительными и при \n",
+    "precision = TP/(TP + FP),  \n",
     "\n",
-    "этом действительно являющимися положительными, а recall показывает, какую долю объектов положительного\n",
+    "recall = TP/(TP + FN)\n",
     "\n",
-    "класса из всех объектов положительного класса нашел алгоритм."
+    "F-Score or F1 = (2 * Recall * Precision)/(Recall + Precision)\n",
+    "\n",
+    "Fb = (1 + b**2)(Recall * Precision)/(b**2 * Recall + Precision)\n",
+    "\n",
+    "FP-rate = FP / (FP + TN)\n",
+    "\n",
+    "specificity = TN/(TN + FP)\n",
+    "\n",
+    "Correlation Coefficient (CC) = (TP FN)(TN FP)(TP FP)(TN FN)\n",
+    "TP TN FN FP\n",
+    "\n",
+    "\n",
+    "Precision можно интерпретировать как долю объектов, названных классификатором положительными и при этом действительно являющимися положительными, а recall показывает, какую долю объектов положительного класса из всех объектов положительного класса нашел алгоритм.\n",
+    "\n",
+    "Мы можем использовать оценку F1, если вы хотите сбалансировать точность и отзывчивость. Это гармоничное средство точности и запоминания.\n",
+    "\n",
+    "Если мы хотим придать немного большее значение точности или отзыву, мы можем добавить к нему коэффициент Beta.\n"
    ]
   },
   {
